--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,268 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+
+.bg-red {
+  background-color: red;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body{
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+
+  
+  overflow-x: hidden;
+}
+
+#login{
+  color: white;
+  box-shadow: 5px 5px 5px 5px #141E30;
+  width: 500px;
+  background-color: #0f4c75;
+  border-radius: 5%;
+}
+
+#login label{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#log{
+  padding: 20px 50px 30px;
+}
+
+#header{
+  text-align: center;
+  background-color: #1b262c;
+  border-radius: 2%;
+}
+
+#header a{
+  margin: 0 25px;
+  font-size: 20px;
+  font-weight: bold;
+  -webkit-transition: all 0.1s linear;
+  -moz-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  text-decoration: none;
+  color: white;
+}
+
+
+
+
+#header a:active{
+  color: black;
+}
+
+#header a:hover{
+  font-size: 22px;
+  transition: .2s;
+}
+
+#cuenta{
+  color: white;
+}
+
+button{
+  color: black;
+}
+
+.badge-pill{
+background-color: #00243e !important;
+color: white;
+padding: 5px 10px;
+cursor: pointer !important;
+}
+
+.todo{
+text-align: center;
+color: white !important;
+background-color: #001524 !important;
+-webkit-transition: background-color  0.5s ease-out;
+-moz-transition:    background-color  0.5s ease-out;
+-o-transition:      background-color  0.5s ease-out;
+transition:         background-color  0.5s ease-out;
+}
+
+.todo div{
+cursor: pointer !important;
+}
+
+#fecha{
+background-color: #ff9e05 !important;
+color: white;
+}
+
+
+.todo:hover{
+background-color: white !important;
+color: #001524 !important;
+}
+
+.badge-pill:hover{
+background-color: #001524 !important;
+color: white;
+padding: 5px 10px;
+cursor: none !important;
+}
+
+#boton{
+  background-color: #448FA3;
+  border:none;
+
+  font-size: 20px;
+}
+
+#modal{
+  border-radius: 50%;
+}
+
+/* .taskh{
+  text-align: center;
+} */
+
+#sidebar-wrapper {
+  min-height: 100vh;
+  margin-left: -15rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
+  color: white;
+  background-color: #00243e;
+  
+}
+
+.list-group-item, .list-group-item  {
+background-color: #00243e;
+-webkit-transition: background-color 0.25s ease-out;
+-moz-transition: background-color    0.25s ease-out;
+-o-transition: background-color      0.25s ease-out;
+transition: background-color         0.25s ease-out;
+}
+
+.list-group-item:hover, .list-group-item:active  {
+background-color: white;
+border: 1px solid #00243e;
+color: #00243e !important;
+}
+
+
+
+#todotitle{
+display: flex;
+font-family: 'Pacifico', cursive;
+font-size: 30px;
+font-weight: 50;
+flex-wrap: wrap;
+}
+
+#addtodo{
+padding: 0;
+background-color: #00243e;
+color: white;
+height: 50px;
+border-radius: 10px;
+width: 90px;
+border: 0;
+-webkit-transition: background-color border-radius color     2s ease-out;
+-moz-transition:    background-color border-radius color     2s ease-out;
+-o-transition:      background-color border-radius color     2s ease-out;
+transition:         background-color border-radius color     2s ease-out;
+
+
+
+}
+
+#addtodo:hover , #addtodo:active{
+padding: 0;
+background-color: white;
+box-shadow: 2px 2px #417897;
+color: #00243e;
+height: 50px;
+border-radius: 10px;
+width: 90px;
+
+}
+
+#addtodo span{
+font-size: 23px;
+padding: 0;
+}
+
+#eliminar , #editar{
+background-color:#ff9e05;
+color: white;
+width: 100px;
+-webkit-transition: background-color 0.1s ease-out;
+-moz-transition: background-color    0.1s ease-out;
+-o-transition: background-color      0.1s ease-out;
+transition: background-color         0.1s ease-out;
+border: 0 !important;
+}
+
+#eliminar:hover, #eliminar:visited, #eliminar:active,
+#editar:hover  , #editar:visited  , #editar:active{
+box-shadow: 2px 2px #ffcf4a!important ;
+background-color: white    !important ;
+color: #ff9e05             !important ;
+border: 1px solid #ff9e05  !important ;
+}
+hr{
+background-color: white;
+width: 100%;
+padding: 0;
+margin: 0;
+margin-top: 5px;
+}
+#todo1{
+background-color: #ffffff;
+}
+
+
+#sidebar-wrapper a{
+  color: white;
+}
+
+
+#sidebar-wrapper .sidebar-heading {
+  padding-top: 15px;
+}
+
+
+#sidebar-wrapper .list-group {
+  width: 15rem;
+  
+}
+
+
+#page-content-wrapper {
+  min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
+
+  #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    margin-left: -15rem;
+  }
+}
+
+#page-content-wrapper{
+  background: #024c69;  /* fallback for old browsers */
+  
+  
 }
